<resources>
    <string name="app_name">Университет</string>

    <string name="you_FIO">Ваша фамилия, имя и отчество</string>

    <string name="fragment_login_tv_describe">"Это номер вашего студенческого\nили зачетной книжки"</string>
    <string name="fragment_login_tv_describe_error">"Код доступа не совпадает."</string> <!-- Проверьте ваш\nномер студенческого или зачетки -->
    <string name="fragment_login_tv_describe_error_internet">"Отсутствует подключение к интернету"</string>
    <string name="fragment_login_tv_describe_error_access">"Ошибка доступа к сервису"</string>

    <string name="fragment_login_dialog_role">"Выбор ролей:"</string>
    <string-array name="fragment_login_dialog_role_array">
        <item>"Обучающийся"</item>
        <item>"Преподаватель"</item>
    </string-array>

    <string name="fragment_login_btn_enter">Войти</string>
    <string name="fragment_login_btn_enter_anon">Войти анонимно</string>
    <string name="fragment_login_anon_btn_enter_auth">Войти c авторизацией</string>

    <string name="fragment_login_anon_btn_select_vuz">Название ВУЗа</string>
    <string name="fragment_login_anon_btn_select_speciality">Специальность и группа</string>

    <string name="fragment_choose_education_et_input_vuz">Введите название ВУЗа</string>
    <string name="fragment_choose_education_et_input_speciality">Введите специальность</string>
    <string name="fragment_choose_education_et_input_discipline">Введите дисциплину</string>

    <string name="nav_teacher">Преподаватель</string>
    <string name="nav_student">Студент</string>
    <string name="nav_marks">Успеваемость</string>
    <string name="nav_classes_schedule">Расписание занятий</string>
    <string name="nav_classes_schedule1">Расписание занятий1</string>
    <string name="nav_session_schedule">Расписание сессии</string>
    <string name="nav_info">Учебный план</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_exit">Выйти</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">open</string>

    <string name="discipline_search">Поиск дисциплин</string>

    <string name="lesson_describe">Занятие</string>
    <string name="discipline_describe">Учебный план</string>
    <string name="grades_title">Успеваемость</string>
    <string name="settings">Настройки</string>
    <string name="settings_key_host">host</string>
    <string name="settings_key_host_university">host_university</string>
    <string name="settings_default_host">http://81.177.140.25/1</string>
    <string name="settings_default_host_university">http://81.177.140.25</string>

    <string name="schedule_day_today">Сегодня</string>
    <string name="schedule_day_stream">Вид</string>

    <string name="empty_pair">Свободная пара</string>
    <string name="session">Сессия</string>
    <string name="session_schedule">Расписание сессии</string>
    <string name="another">ЕЩЁ %d</string>

    <string name="lecture">"Лекции: "</string>
    <string name="practice">"Практика: "</string>
    <string name="lab">"Лабораторные: "</string>
    <string name="self">"Самостоятельная работа: "</string>

    <string name="exam">Экзамен</string>
    <string name="set">Зачет</string>
    <string name="course">Курсовая работа</string>

    <string name="testSession">Сессия длится с 14.08 по 27.08.\n Желаем вам удачи!</string>
    <string name="selectDate">Выберите дату</string>
    <string name="password">Пароль</string>
    <string name="demo">Демо</string>
    <string name="logo">ЛОГО</string>

    <!-- Сообщения об ошибках -->
    <string name="error">Ошибка</string>
    <string name="errorLoadUniversities">Не удалось загрузить данные о университетах</string>
    <string name="errorLessonsRefresh">Обновить</string>

    <string name="no_server_response">Нет ответа от сервера</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="response_can_not_be_parse">Ответ невозможно обработать</string>
    <string name="no_data">Нет данных</string>

    <string name="academic_plan_no_data">Данные об учебном плане отсутствуют</string>
    <string name="grades_no_data">Данные об успеваемости отсутствуют</string>
    <string name="schedule_no_data">Занятия отсутствуют</string>
    <string name="schedule_v1_no_data">Занятия отсутствуют</string>

    <!-- Ресурсы для переопределения в flavor -->
    <integer name="university_selector_visible">0</integer>
    <integer name="demo_visible">0</integer>
    <integer name="university_name_visible">2</integer>
    <string name="university_name"></string>
</resources>

