<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteYellow2"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_schedule_view_group_session_background_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="top"
            tools:text="@string/session"
            android:lineSpacingExtra="8sp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/item_schedule_view_group_session_background_tv_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="13dp"
            android:gravity="center"
            android:lineSpacingExtra="4sp"
            tools:text="@string/testSession"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/item_schedule_view_group_session_background_btn_go_to"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:text="@string/session_schedule"
            android:textColor="@color/colorDeepOrange"
            android:textSize="14sp"/>
    </LinearLayout>
</FrameLayout>