<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorLogoBackground"
                android:orientation="vertical"
                android:paddingLeft="45dp"
                android:paddingRight="45dp"
                android:paddingTop="79dp">

    <TextView
        android:id="@+id/fragment_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ЛОГО"
        android:textColor="@color/colorLogo"
        android:textSize="50sp"
        android:textStyle="bold"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_login_et_name_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_login_logo"
        android:layout_marginTop="53dp"
        app:hintTextAppearance="@style/MyHintText">

        <EditText
            android:id="@+id/fragment_login_et_name"
            style="@style/MyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ваше имя и фамилия"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_login_et_password_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_login_et_name_til"
        android:layout_marginTop="30dp"
        app:hintTextAppearance="@style/MyHintText">

        <com.maksim88.passwordedittext.PasswordEditText
            android:id="@+id/fragment_login_et_password"
            style="@style/MyEditText"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Код доступа"
            app:pet_iconShow="@drawable/ic_pass_eye_closed"
            app:pet_iconHide="@drawable/ic_pass_eye_closed"
            app:pet_nonMonospaceFont="true"
            app:pet_disableIconAlpha="true"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/fragment_login_tv_describe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_login_et_password_til"
        android:singleLine="false"
        android:text="@string/fragment_login_tv_describe"
        android:textColor="@color/colorFloatText"
        android:textSize="12sp"
        android:layout_marginTop="6.5dp"/>

    <Button
        android:id="@+id/fragment_login_btn_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_login_tv_describe"
        android:enabled="true"
        android:text="@string/fragment_login_btn_enter"
        android:background="@drawable/button_enter_selectror"
        android:textColor="@color/colorLogoBackground"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:paddingTop="11dp"
        android:paddingBottom="9dp"
        android:paddingLeft="21.5dp"
        android:paddingRight="21.5dp"/>

    <Button
        android:id="@+id/fragment_login_btn_enter_anon"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_below="@id/fragment_login_btn_enter"
        android:layout_marginTop="70dp"
        android:enabled="true"
        android:text="@string/fragment_login_btn_enter_anon"
        android:paddingTop="10dp"/>

</RelativeLayout>