<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteYellow1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:nestedScrollingEnabled="false"
        android:scaleType="fitXY"
        android:src="@drawable/background_login_page"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingRight="45dp"
        android:paddingTop="79dp">

        <TextView
            android:id="@+id/fragment_login_anon_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_margin_left"
            android:text="ЛОГО"
            android:textColor="@color/colorDeepOrange"
            android:textSize="50sp"
            android:textStyle="bold"
            android:visibility="invisible"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_login_anon_et_select_vuz_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_login_anon_logo"
            android:layout_marginLeft="@dimen/login_margin_left"
            android:layout_marginTop="53dp"
            app:hintTextAppearance="@style/LoginTextInputLayoutHint">

            <EditText
                android:id="@+id/fragment_login_anon_et_select_vuz"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_login_state_normal"
                android:drawableRight="@drawable/proxy_ic_arrow_drop_down_24dp_black_54a"
                android:editable="false"
                android:ellipsize="end"
                android:focusable="false"
                android:hint="@string/fragment_login_anon_btn_select_vuz"
                android:paddingBottom="2.5dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack_38a"
                android:textSize="16sp"
                tools:text="Северо-Кавказский Федеральный Университет"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_login_anon_et_select_speciality_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_login_anon_et_select_vuz_til"
            android:layout_marginLeft="@dimen/login_margin_left"
            android:layout_marginTop="49dp"
            app:hintTextAppearance="@style/LoginTextInputLayoutHint">

            <EditText
                android:id="@+id/fragment_login_anon_et_select_speciality"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_login_state_normal"
                android:drawableRight="@drawable/proxy_ic_arrow_drop_down_24dp_black_54a"
                android:editable="false"
                android:ellipsize="end"
                android:focusable="false"
                android:hint="@string/fragment_login_anon_btn_select_speciality"
                android:inputType="textMultiLine"
                android:paddingBottom="2.5dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack_38a"
                android:textSize="16sp"
                tools:text="bla bla dsf ds sdf dsf\nqgroup"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/fragment_login_anon_btn_enter"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/fragment_login_anon_btn_enter_auth"
            android:layout_marginBottom="100dp"
            android:layout_marginLeft="@dimen/login_margin_left"
            android:background="@drawable/button_enter_selector"
            android:enabled="false"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:paddingBottom="9dp"
            android:paddingEnd="21.5dp"
            android:paddingLeft="21.5dp"
            android:paddingRight="21.5dp"
            android:paddingStart="21.5dp"
            android:paddingTop="11dp"
            android:text="@string/fragment_login_btn_enter"
            android:textColor="@color/button_enter_text_color_selector"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/fragment_login_anon_btn_enter_auth"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="26dp"
            android:layout_marginLeft="@dimen/login_margin_left_for_button"
            android:enabled="true"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="10dp"
            android:text="@string/fragment_login_anon_btn_enter_auth"
            android:textColor="@color/button_another_enter_text_color_selector"
            android:textSize="14sp"/>

    </RelativeLayout>
</FrameLayout>